<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".activity.ProfileActivity">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/image_logo"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="40dp"
            android:src="@drawable/plant_monitor" />

        <EditText
            android:id="@+id/input_userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary" />

        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/signin_btn"
            android:text="@string/signup"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>